[package]
name = "roshi"
version = "0.1.0"
authors = ["Eduard Sachava <liberumed@gmail.com>"]
edition = "2018"

[[bin]]
name = "roshi"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
rand = "0.5.5"